--- a/client/src/Components/NavSquares/style.css
+++ b/client/src/Components/NavSquares/style.css
@@ -4,6 +4,7 @@
     /* border-radius: 10px; */
     border-width: 1px;
     /* height: 200px; */
+    height:92%;
     width: 100%;
     margin-bottom: 10%;
     background-color: black;
