--- a/client/src/Containers/TruckSearch/style.css
+++ b/client/src/Containers/TruckSearch/style.css
@@ -1,3 +1,28 @@
+
 #searchResults{
     margin:auto;
+}
+.truckCard{
+    border-width: '5px' ;
+    border-color: black;
+    border-style: solid;
+    border-radius: 30px;
+    padding:5%;
+    width:100%;
+    /* height: 80%; */
+    margin:5%;
+}
+.filterButton{
+    height: 80%;
+    margin-left: 1%;
+    border-radius: 25px ;
+}
+.searchInput{
+    border-radius: 10px 25px 25px 10px;
+}
+.mockImg{
+    height: 100%;
+    width:100%;
+    background-color: aqua;
+    border-radius: 25px;
 }
