small style change to filter buttons

--- a/client/src/Containers/TruckSearch/style.css
+++ b/client/src/Containers/TruckSearch/style.css
@@ -15,7 +15,8 @@
 .filterButton{
     height: 80%;
     margin-left: 1%;
-    border-radius: 25px ;
+    border-radius: 25px;
+    margin-bottom:1%;
 }
 .searchInput{
     border-radius: 10px 25px 25px 10px;
