user can now toggle between their chosen flavors and custom chosen flavors

--- a/client/src/Containers/Signup/style.css
+++ b/client/src/Containers/Signup/style.css
@@ -6,3 +6,9 @@
     width:50%;
 
 }
+
+.signUpButton{
+    margin-top: 10%;
+    border-radius: 25px !important; 
+    background-color: #D6742B !important;
+}
