--- a/client/src/Containers/TopNav/style.css
+++ b/client/src/Containers/TopNav/style.css
@@ -6,10 +6,19 @@
     border-radius: 25px;
     /* padding-left: 3% !important;     */
 }
+.show{
+    display: block;
+}
 
 @media screen and (max-width: 992px) {
-   .active{
-    width:40%;
-    padding-left:3% !important;
-   }
-  }
+    .active {
+        width: 40%;
+        padding-left: 3% !important;
+    }
+    .hide{
+        display: none;
+    }
+    .truckNames{
+        margin-left:5%;
+    }
+}
