--- a/client/src/Containers/TopNav/sidenav.module.css
+++ b/client/src/Containers/TopNav/sidenav.module.css
@@ -1,15 +1,16 @@
 .sidenav {
     width: 250px;
     transition: width 0.3s ease-in-out;
-    height: 100%;
+    height: 100vh;
     background-color: rgb(10,25,41);
     padding-top: 28px;
-    position: fixed;
+    float: left;
 }
 .sidenavClosed {
-    composes: sidenav;
+    /* composes: sidenav;
     transition: width 0.3s ease-in-out;
-    width: 60px;
+    width: 0px */
+    display: none;
 }
 .sideitem {
     display: flex;
@@ -32,7 +33,8 @@
     align-self: center;
     align-self: flex-start;  
     justify-self: flex-end;
-    color: #B2BAC2;
+    color: #000000;
+    font-weight: bolder;
     background-color: transparent;
     border: none;
     cursor: pointer;
