--- a/client/src/Containers/FoodTruckNearBy/style.css
+++ b/client/src/Containers/FoodTruckNearBy/style.css
@@ -66,7 +66,9 @@
     height: 8px;
     background-color: var(--mark-color);
   }
-
+  .mapContainer{
+    width:100%;
+  }
   @media screen and (max-width: 992px) {
     .active {
         width: 40%;
