--- a/client/src/Containers/FoodTruckNearBy/style.css
+++ b/client/src/Containers/FoodTruckNearBy/style.css
@@ -69,6 +69,11 @@
   .mapContainer{
     width:100%;
   }
+  .foodTruckList{
+    height: 65vh;
+    overflow:scroll;
+    overflow-x:hidden ;
+  }
   @media screen and (max-width: 992px) {
     .active {
         width: 40%;
