testing out side scroll functionality

--- a/client/src/Containers/FoodTruckNearBy/style.css
+++ b/client/src/Containers/FoodTruckNearBy/style.css
@@ -96,7 +96,7 @@
     .hide{
         display: none;
     }
-    .mapContainer{
-      margin-left: 10%;
+    .foodTruckList{
+      display: none;
     }
 }
