--- a/client/src/Containers/TopNav/style.css
+++ b/client/src/Containers/TopNav/style.css
@@ -15,6 +15,9 @@
 .showDesktop{
     display:block;
 }
+.be-light {
+    background: transparent !important;
+  }
 @media screen and (max-width: 992px) {
     .active {
         width: 40%;
