--- a/client/src/Components/NavSquares/style.css
+++ b/client/src/Components/NavSquares/style.css
@@ -1,91 +1,115 @@
-
-.navSquare{
-    border-style: solid;
-    border-color: black;
-    border-radius: 10px;
-    border-width: 1px;
-    height: auto;
-    text-decoration: none;
-    /* height:50%; */
-    width: 100%;
-
-    background-color: black;
+.body{
+  background-color: yellow !important;
 }
-.squareText{
-    text-decoration: none;
-    margin: auto;
-    font-size: x-large;
-    font-weight: bolder;
+.navSquare {
+  border-style: solid;
+  border-color: black;
+  border-radius: 10px;
+  border-width: 1px;
+  height: auto;
+  text-decoration: none;
+  /* height:50%; */
+  width: 100%;
+
+  background-color: black;
 }
 
-.checkweather{
-    background-image: url('../../photos/great_weather.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 10px;
+.squareText {
+  text-decoration: none;
+  margin: auto;
+  font-size: x-large;
+  font-weight: bolder;
 }
 
-.weathertrends{
-    background-image: url('../../photos/line_graph.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 10px;
-    /* height: 100%; */
-}
 .circle {
-background-image: url(./foodTruckWIndow.jpg);
-background-size:cover;
-background-repeat: no-repeat;
-height: 100vh;
-/* width:100vw; */
+  background-color: rgb(233, 190, 0) !important;
+  background-image: url(./foodTruckWIndow.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  /* width:100vw; */
 }
-h1{
-  font-size:60px !important;
+
+h1 {
+  font-size: 60px !important;
   font-weight: lighter !important;
 }
-.homeNav{
+
+.homeNav {
   width: 55%;
-  position:absolute;
+  position: absolute;
   right: 10%;
 }
-.homeNavMobile{
+
+.homeNavMobile {
   display: none;
 }
-.loginSignUp{
-  padding-top:25%;
+
+.loginSignUp {
+  padding-top: 25%;
   padding-right: 10%;
   padding-left: 50%;
   text-align: right;
-  
+
 }
-.logInbuttons{
+
+.logInbuttons {
   /* margin-right: 10%; */
   width: 40%
 }
-.loginButton{
-  /* margin-left:1%; */
+
+
+.createAccountButton {
+  margin-left: 10%
 }
-.createAccountButton{
-  margin-left:10%
+
+.buttonContainer {
+  margin-top: 10% !important;
+  margin-left: 18% !important;
 }
-.buttonContainer{
-  margin-top:10% !important;
-  margin-left:18% !important;
-}
+
 /* mobileMargin */
 
 @media screen and (max-width: 992px) {
-    .hide{
-      display: none;
-    }
-    .show{
-      display: block;
-    }
-    .homeNav{
-      display: none;
-      /* right: 20px; */
-    }
-    .homeNavMobile{
-      display: block;
-    }
+  /* .body{
+    background-color:;
+  } */
+  .hide {
+    display: none;
   }
+
+  .show {
+    display: block;
+  }
+
+  .homeNav {
+    display: none;
+    /* right: 20px; */
+  }
+
+  .homeNavMobile {
+    display: block;
+  }
+
+  .circle {
+    background-image: url(./foodTruckWIndow.jpg);
+    background-size:contain;
+    background-repeat: no-repeat;
+    /* height: 100vh; */
+    /* position: absolute; */
+    /* bottom: 0px; */
+  }
+  .buttonContainer {
+    margin-top: 1% !important;
+    margin-left: 18% !important;
+  }
+  .loginSignUp{
+    padding-top: 50%;
+    padding-right:15%;
+    padding-left: 25%;
+    text-align: right;
+    position: absolute; 
+    bottom: 0px;
+  }
+  /* .homeMessage{} */
+}
