--- a/client/src/Containers/Login/style.css
+++ b/client/src/Containers/Login/style.css
@@ -1,9 +1,9 @@
 .loginContainer{
-    /* margin-top:10%; */
-    padding-top: 40%;
-    padding-left:10%;
-    /* margin-left: auto; */
-    /* margin-right: auto; */
+    margin-top:10%;
+    /* padding-top: 40%; */
+    /* padding-left:10%; */
+    margin-left: auto;
+    margin-right: auto;
     width:60%;
 }
 
@@ -14,4 +14,15 @@
 .error{
     color:red;
     font-size: 10px;
+}
+@media screen and (max-width: 992px) {
+    .loginContainer{
+        /* margin-top:10%; */
+        padding-top: 40%;
+        padding-left:10%;
+        /* margin-left: auto; */
+        /* margin-right: auto; */
+        width:60%;
+    }
+
 }
