--- a/client/src/Containers/TopNav/style.css
+++ b/client/src/Containers/TopNav/style.css
@@ -18,6 +18,14 @@
 .be-light {
     background: transparent !important;
   }
+  .brandLogo{
+    font-size: 25px !important;
+    font-weight: bold;
+}
+.brandLogo span{
+    font-weight: 100 ;
+    color: rgb(235, 182, 11) !important;
+  }
 @media screen and (max-width: 992px) {
     .active {
         width: 40%;
