--- a/client/src/Components/DisplayListOfTrucks/style.css
+++ b/client/src/Components/DisplayListOfTrucks/style.css
@@ -4,3 +4,8 @@
     color: white;
     background-color: gray;
 }
+.displayTruckDetails{
+    /* overflow: hidden !important; */
+    height: 100px !important;
+    overflow: auto;
+}
