more style progress

--- a/client/src/Containers/HomeList.js/style.css
+++ b/client/src/Containers/HomeList.js/style.css
@@ -93,7 +93,7 @@
     width:100%;
   }
   .edit{
-    background:rgb(244, 244, 13);
+    background:rgba(233, 178, 37, 0.8);
     border-radius: 5px;
   }
   .filterButtons{
@@ -104,7 +104,7 @@
     margin-bottom:1%
   }
   .PrimaryFilterButtons{
-    background-color: #f2e67c;
+    background-color:rgba(233, 178, 37, 0.8);
     border-radius: 5px;
     margin-right:1%;
   }
