--- a/client/src/Components/DisplayListOfTrucks/style.css
+++ b/client/src/Components/DisplayListOfTrucks/style.css
@@ -13,8 +13,10 @@
 .singleTruck{
     border-style: solid;
     border-color: black;
+    border-width: 2px;
     border-radius: 10px;
-    margin-bottom: 1px;
+    margin-bottom: 2px;
+    background-color: rgba(233, 178, 37, 0.8);
 }
 .singleTruckImg{
     width:40%;
