--- a/client/src/Components/DisplayListOfTrucks/style.css
+++ b/client/src/Components/DisplayListOfTrucks/style.css
@@ -4,3 +4,30 @@
     color: white;
     background-color: gray;
 }
+.displayTruckDetails{
+    /* overflow: hidden !important; */
+    height: 100px !important;
+    overflow: auto;
+}
+
+.singleTruck{
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    border-radius: 10px;
+    margin-bottom: 2px;
+    background-color: rgba(233, 178, 37, 0.8);
+}
+.singleTruckImg{
+    width:40%;
+    margin:2%;
+    border-radius: 10px;
+    margin-left:-1%;
+}
+
+@media screen and (max-width: 992px) {
+    .singleTruckImg{
+        width: 100%;
+        margin-top: 15%;
+    }
+}
