--- a/client/src/Containers/HomeList.js/style.css
+++ b/client/src/Containers/HomeList.js/style.css
@@ -1,3 +1,13 @@
+.truckListContainer{
+  z-index: 1;
+  position: absolute;
+  top: 40px;
+  left: 50px;
+  background-color: white;
+  width: 30%; 
+  height: auto; 
+}
+
 .scroll::-webkit-scrollbar {
   width: 5px;
 
@@ -107,4 +117,8 @@
   .mapContainer {
     margin-left: 10%;
   }
+  .truckListContainer{
+    left: 5px;
+  }
+
 }
