showing distance of truck from users location

--- a/client/src/Components/DisplayListOfTrucks/style.css
+++ b/client/src/Components/DisplayListOfTrucks/style.css
@@ -25,6 +25,11 @@
     margin-left:-1%;
 }
 
+.favHeart{
+    font-size:x-large;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 992px) {
     .singleTruckImg{
         width: 100%;
