big updates to map and to back end funciton

--- a/client/src/Components/DisplayListOfTrucks/style.css
+++ b/client/src/Components/DisplayListOfTrucks/style.css
@@ -6,7 +6,7 @@
 }
 .displayTruckDetails{
     /* overflow: hidden !important; */
-    height: 100px !important;
+    /* height: 100px !important; */
     overflow: auto;
 }
 
