--- a/client/src/Containers/HomeList.js/style.css
+++ b/client/src/Containers/HomeList.js/style.css
@@ -1,11 +1,9 @@
 .truckListContainer{
-  z-index: 1;
-  position: absolute;
-  top: 40px;
-  left: 50px;
+  /* z-index: 1; */
+  /* position: absolute; */
   background-color: white;
-  width: 30%; 
-  height: auto; 
+  width: 100%; 
+  /* height: auto;  */
 }
 
 .scroll::-webkit-scrollbar {
@@ -54,7 +52,7 @@
 
 .foodTruckList {
   height: auto;
-  max-height: 65vh;
+  max-height: 100vh;
   overflow: scroll;
   overflow-x: hidden;
 }
