--- a/client/src/Containers/TopNav/style.css
+++ b/client/src/Containers/TopNav/style.css
@@ -1,11 +1,11 @@
-.active {
-    transform: scale(0.95);
+/* .active { */
+    /* transform: scale(0.95); */
     /* Scaling button to 0.98 to its original size */
-    box-shadow: 1px 1px 1px 1px rgba(217, 83, 21, 0.868);
+    /* box-shadow: 1px 1px 1px 1px rgba(217, 83, 21, 0.868); */
     /* Lowering the shadow */
-    border-radius: 25px;
+    /* border-radius: 25px; */
     /* padding-left: 3% !important;     */
-}
+/* } */
 
 
 .show{
