--- a/client/src/Containers/VendorPortal/style.css
+++ b/client/src/Containers/VendorPortal/style.css
@@ -1,5 +1,5 @@
 .vendorImg{
-    height: 100%;
+    /* height: 100%; */
     width:100%;
 }
 .vendorInputForm{
@@ -8,4 +8,7 @@
     border-style: solid;
     border-radius: 25px;
     padding:5%;
+}
+.vendorIMG{
+    width: 100%;
 }
